# js-wasm-templates

./: .gitignore  Cargo.toml  README.md
solid-ts/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  readme.md  rsbuild.config.ts
solid-ts/src/: App.module.scss  App.tsx  index.tsx  wpkg.tsx
solid-ts/src/app/: App.tsx
solid-ts/wpkg/: Cargo.toml
solid-ts/wpkg/src/: lib.rs
vanilla/: Cargo.toml  index.html  readme.md
vanilla/src/: index.js  lib.rs
vanilla/src/assets/: style.css
vanilla/wpkg/: Cargo.toml
vanilla/wpkg/src/: lib.rs
