[package]
name = "solid-ts"
version = "0.1.0"
edition = "2021"
exclude = ["readme.md"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debugging = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.97"
gloo-console = "0.3.0"
console_error_panic_hook = { version="0.1.7", optional=true }